--- a/en/debugger.html
+++ b/en/debugger.html
@@ -44,15 +44,16 @@ The ultra light code editor.
         </p>
     </div>
 
+<p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
 <p>If you can't open the link above, please launch App Store and found <lt>"Speare"</lt> by searching.</p>
 
 <p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br><br>
-Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> with instant diff operation in Speare code editor.
+Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> with fast code completion and instant diff operation in Speare code editor.
 </p>
-
+<p>more screenshots: <a href="screenshots.html" target="_blank">screenshot references</a>.</p>
 
 <h2>Debug Mode</h2>
 <p>1. Click main menu "Navigate" → "Toggle Output", to show the debug toolbar.</p>
@@ -155,13 +156,15 @@ On the contrary, they not only want to recover their cost, they even drag custom
 <p>C is not safe but it is the strongest programming language and the most strongest softwares were written with it, including operation system and the most important infrastructure of internet and software industry, think about BIND, Apache, Nginx, MySQL, PostgreSQL, SQLite, Berkeley DB, Redis, Memcached, PHP, Perl, Ruby, Python, Lua, Git, FFmpeg and other countless excellent softwares. If sqlite and git were written with C++ or Java, I'll throw them away immediately. C is top professionals' language, a mature developer may needs ten years to really write software with it. The product quality of the software industry is directly proportional to the number of experienced C programming experts.</p>
 
 <h2>The Tao and Kung Fu of Programming</h2>
-<p><i><b>Why all attempts failed?</b> They want to create new programming language to resolve problem in software industry, but all attempts failed. Any new programming language that intended to achieve a seamless translation from Lisp (or Lisp like language, e.g Javascript) to native executable code will failed at final. The product quality of the software industry is directly proportional to the number of experienced C programming experts, but experienced C developer and C ninja are rare and rare, because only a few people can walk on this difficult way. C is really unsafe and really difficult to master, to be a mature C developer or an C expert, a developer may needs about ten years to continually experience it. Programming is difficult, there is no shortcuts for programming, programming language itself can't resolve it. Programming in C++ is not essential, but mast how to OOP in C++ is essential, there's no any other language can replace the importance of it and no any shortcut to bypass OOP with it, master OOP in C++ and then you can better programming in other high-level languages. Only the honest and continuous improving of the skills of OOP is the reliable way. Only the honest and continuous improving of the skills of C programming is the reliable way.<br><br>
+<p><i><b>Why all attempts failed?</b> They want to create new programming language to resolve problem in software industry, but all attempts failed. Any new programming language that intended to achieve a seamless translation from Lisp (or Lisp like language, e.g Javascript) to native executable code will failed at final. The product quality of the software industry is directly proportional to the number of experienced C programming experts, but experienced C developer and C ninja are rare and rare, because only a few people can walk on this difficult way. C is really unsafe and really difficult to master, to be a mature C developer or an C expert, a developer may needs about ten years to continually experience it. Programming is difficult, there is no shortcuts for programming, programming language itself can't resolve it. Programming with C++ is not essential, but mast how to OOP with C++ is essential, there's no any other language can replace the importance of it and no any shortcut to bypass OOP with it, master OOP with C++ and then you can better programming in other high-level languages. Only the honest and continuous improving of the skills of OOP is the reliable way. Only the honest and continuous improving of the skills of C programming is the reliable way.<br><br>
 <span class="green">"C + elegant scripting language" is the reliable, efficient and flexible extending solution.</span><br><br>
-If you can't write quality C code, that means you're not a real programmer. Most developer have never written a real C software in their life, I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages.</i><br><br>
+If you can't write quality C code, that means you're not a real programmer. Most developer have never written a real C software in their life, I wish more and more developer use Speare code editor to develop efficient and excellent software with C instead of current popular bloated programming languages. Small software with strong bone!</i><br><br>
 </p>
 
 
-<p><b>Crafting software as small as possible!</b></p>
+<p><!--lt>Emphasise small software is never too much!<lt><br-->
+<lt>Crafting software as small as possible!</lt>
+</p>
 <p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 
