--- a/en/speare.html
+++ b/en/speare.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/stylesheet.css">
 <style type="text/css">
-w {color:#ffc8c8; font-weight: bold;}
+w { color:#ffc8c8; font-weight: bold; }
 </style>
 <script src="../js/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
@@ -28,11 +28,11 @@ w {color:#ffc8c8; font-weight: bold;}
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
+        <img src="../images/speare/logo.png" style="width: 120px;" class="applogo"/>
         <h1>Speare<br><em>Version 1.2.344</em></h1>
         <p class="greenbig">The ultra light code editor.</p>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++, you can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++. You can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
     </div>
 
 <h2 class="dark">What's new</h2>
@@ -47,7 +47,6 @@ w {color:#ffc8c8; font-weight: bold;}
 </p>
 </div>
 
-
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
 
 <p>If you can't open the link above, please launch App Store and found Speare by searching.</p>
@@ -55,7 +54,7 @@ w {color:#ffc8c8; font-weight: bold;}
 
 <h2>Features</h2>
 <p><ul>
-<li>Ultra lightweight.</li>
+<li>Ultra lightweight, only ~7MB when packed up everything.</small></li>
 <li>Well designed workspace management. Intuitive and concise.</li>
 <li>High performance when managing large amount of files for big projects.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
@@ -77,13 +76,13 @@ w {color:#ffc8c8; font-weight: bold;}
 <li>Preview all kinds of files, image, SVG, PDF, office documents, audio and video etc.</li>
 </ul></p>
 
-
 <h2>Screenshot</h2>
 <p><a href="../images/speare/debug_sqlite_with_speare_code_editor.png" target="_blank"><img src="../images/speare/debug_sqlite_with_speare_code_editor.png" class="screenshots"/></a><br><br>
 Screenshot of <a href="https://sqlite.org/" target="_blank">SQLite</a> source code "Parallel Editing" in Speare code editor, "Parallel Editing" mode allows user stick one file in the bottom view and switch different files in the top view.<br><br>
 
-Using .diff files with the help of "Parallel Editing" mode has obvious advantage, copy code blocks in the bottom text view and fast switch different files in the top text view can efficiently edit files very fast, and Speare can index .diff files for big file changes very well comparing to other code editor and IDEs.
+Using .diff files with the help of "Parallel Editing" mode has obvious advantage, copy code blocks in the bottom text view and fast switch different files in the top text view can efficiently edit files very fast, and Speare can index .diff files for big file changes very well comparing to other code editor and IDEs. And, Spear enable user edit arbitrary two souce code file side by side and also support edit source code file with built-in web browser side by side.
 </p>
+<p>more screenshots: <a href="screenshots.html" target="_blank">screenshot references</a>.</p>
 
 <h2>Fast edit several files separately</h2>
 <p>Just drag the file one by one from Finder and drop into workspace, edit them and then right-click to "Remove All".</p>
@@ -95,7 +94,7 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <p>If you want to edit source code files on iPad, or review code on iPad, please refer another app developed by me, <a href="powerreader.html">iCodeEditor</a>, an integrated code editor for iPad. Sorry, it's not free.</p>
 
 <h2>Code editor and IDE on macOS</h2>
-<p class="small">Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. As a programmer, so many text editor I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g Textadept, CotEditor and TextMate. I never like desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small, free and friendly code editor which implements the most important missing features in common code editors, e.g bookmark management, parallel editing, instant diff and fast locate code lines between multiple files, code block live parsing etc.
+<p class="small">Emphasise small software is never too much! e.g. iTerm2 is better than Terminal.app, but it's so big! about 69MB! however Terminal.app is only 8.3MB! so I throw it away immediately! neovim bring some excitements to developers, but it's still too big! xxMB! so I give up it immediately! Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. As a programmer, so many text editor I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g. Textadept, CotEditor and TextMate. I never like desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small and friendly code editor which implements the most important missing features in common code editors, including code completion, parallel editing, instant diff, bookmark management and fast locate code lines between multiple files, code block live parsing etc.
 </p>
 
 <table><tr><td>No.</td><td> Name </td><td> Size </td> <td>No.</td><td> Name </td><td> Size </td>  </tr>
@@ -118,6 +117,7 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <tr><td>7</td><td>C# + .NET</td><td>Fast implementing GUI app</td><td>Suitable for Windows but not suitable for macOS GUI app, Mono required (6.10 362.3MB!).</td></tr>
 <tr><td>8</td><td>Native Cocoa</td><td>Mature, reliable, high performance</td><td>Best frameworks to build macOS app</td></tr>
 </table>
+
 <p>Speare code editor was developing based on the native pure Cocoa frameworks with leveraging several C library results a very small footprint, high performance, small memory and storage runtime consuming, and ultra small distribution. Only 1.1MB executable!</p>
 
 <h2>Why not big software?</h2>
@@ -127,11 +127,11 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 
 <h2>Why another code editor and IDE on macOS?</h2>
 <p>Although there are so many code editor and IDE available on macOS, but Speare code editor has its own unique characteristics:<br>
-<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB! </li>
+<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 1.1MB! </li>
 <li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
 <li><lt>Freedom.</lt> Feels light, simple and free. High performance code editor, flexibility to extend it to support special developing requirements and easily add a new programming language, most of these IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. But Speare code editor give you very flexible control to extend it to add syntax highlighting for a special document and debugging environment for a new programming language.
-</li>
-</ol></p>
+</li></ol></p>
+
 
 <div style="display:none;">
 <h2>About Apple App Store</h2>
@@ -174,14 +174,18 @@ Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcut
 
 <h2>Syntax Checking and Run Code Instantly</h2>
 <p>a. Press shortcut key "Command + R".<br>
-b. Click menu: "Command" → "Syntax Checking &amp; Run".<br>
+b. Click menu: "Command" → "Syntax Checking &amp; Run".<br><br>
+
+Spear enable people to run arbitrary shell commands within editor.<br>
+Spear enable people to run shell scripts within editor with hot editing.<br>
+Spear enable people to write unlimited shell extension to do anything they want.<br>
 </p>
 <p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
 
 
 <h2>Add a New Colour Scheme</h2>
 &nbsp;&nbsp;&nbsp;Colour scheme boilerplate:<br>
-<div class="block">
+<div class="block small">
 # 1. file must be UTF-8 encoding<br>
 # 2. line starts with character '#' is comment<br>
 # 3. colour string must be a valid hex value of HTML colour<br>
@@ -218,8 +222,9 @@ Some reference schemes can be downloaded from here: <a href="http://www.sevenuc.
 <p><b>Supported languages</b>:<br>
 a. C, C++, Objective‑C, C#, Java (built-in support).<br>
 b. Ruby, Lua, Python, Perl, PHP, Tcl, Swift, JavaScript, Shell scripts, Dart, Go and Rust.<br>
-  (located in the formatters directory, and requires some configuration to let them correctly working)<br><br>
+  (located in the formatters directory, requires a little configuration to let them correctly working)<br><br>
 
+<lt>~/Library/Application Scripts/com.sevenuc.SpeareHelper/formatters/</lt><br>
 <i>Ensure the formatters can be correctly working, you should take a look at above directory, the built-in formatters:<br>
 <lt>js.sh:</lt> check Node.js installed and can be accessed from command line.<br>
 <lt>php.sh:</lt> check PHP installed and can be accessed from command line.<br>
@@ -247,7 +252,7 @@ b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScri
 </p>
 
 
-<p><span class="warning">Crafting software as small as possible!</span></p>
+<p><lt>Crafting software as small as possible!</lt></p>
 
 
 <div style="display:none;">
