--- a/en/about.html
+++ b/en/about.html
@@ -27,18 +27,15 @@
 
 
 <div class="container-fluid">
-
-
 <div class="jumbotron">
-           
 <h1>About</h1>
 <h4>Running things in silence.</h4>
 <p><br><br></p>
-<p><a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="extraimg screenshots"><br>
-</p>
-
 </div> 
 
+<p>
+<a href="../images/computer.png" target="_blank"><img src="../images/computer.png" class="extraimg screenshots"><br>
+</p>
 	
 <footer>
     <div class="row">
