--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -28,19 +28,33 @@ w {color:#ffc8c8; font-weight: bold;}
 <div class="container-fluid">
 
     <div class="jumbotron">
-        <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.344</em></h1>
-        <p class="greenbig">The ultra light code editor.</p>
+        <p><pre>
+   ____
+  / __/ __  ___ ___  ___ ___
+  _\ \/ _ \/ -_) _ `/ __/ -_)
+ /___/ .__/\__/\_,_/_/  \__/
+    /_/
+Speare v1.2.344
+The ultra light code editor.
+(c) 2021 http://www.sevenuc.com
+</pre></p>
+        <h1></h1>
         <p class="lead">
-<a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++, you can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
+        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.
+        </p>
     </div>
+
+<p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
 
 
 <h2>Screenshots</h2>
 <p>
+<a href="../images/speare/screenshots/symbol_index_in_speare.png" target="_blank"><img src="../images/speare/screenshots/symbol_index_in_speare.png" class="screenshots"/></a><br><br>
+<a href="../images/speare/screenshots/java_in_speare.png" target="_blank"><img src="../images/speare/screenshots/java_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/awk_in_speare.png" target="_blank"><img src="../images/speare/screenshots/awk_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/lua_in_speare.png" target="_blank"><img src="../images/speare/screenshots/lua_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/ruby_in_speare.png" target="_blank"><img src="../images/speare/screenshots/ruby_in_speare.png" class="screenshots"/></a><br><br>
+
 </p>
 
 
