--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -29,14 +29,14 @@
         <p><img src="../images/littlefox/logo.png" style="width: 120px;" /></p>
         <h1>LittleFox</h1>
         <p class="greenbig">The small utility for making karaoke videos in a comfortable way.</p>
-        <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works. It helps people share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, and easily share them with a very small file size.<br><br>
+        <p class="lead"><b>LittleFox</b> is a small tool designed to help people synthesis subtitle with music and video in an efficient way. It was designed to conveniently synthesis subtitle with audio and video without traditional boring works, result video generated after only several clicks. It helps people share music or video on social websites or make slideshows with speech audio and pictures in a simple and efficient way. With the help of it, you can burn your favourite mp3 to video with lyrics sheet in several minutes, make slideshows by merging pictures with speech audio, synchronise some words to an exists video, and easily share them with a very small file size.<br><br>
         <span class="hilight">LittleFox is also an accurate karaoke video making tool. </span>
         </p>
     </div>
 
 
 <h2>Share music and video on social websites</h2>
-<p>LittleFox can produce very smaller video file than original mp3 or mp4 file so that the produced output file can be suitable to share on social websites, such as Twitter, Youtube, Vimeo, Netflix etc.</p>
+<p>LittleFox can produce very smaller video file than original mp3 or mp4 file so that the produced output file can be suitable to be shared on social websites, such as Twitter, Youtube, Vimeo, Netflix etc.</p>
 
 
 <h2>Synthesising Types</h2>
