--- a/en/speare.html
+++ b/en/speare.html
@@ -222,7 +222,7 @@ Some reference schemes can be downloaded from here: <a href="http://www.sevenuc.
 <p><b>Supported languages</b>:<br>
 a. C, C++, Objective‑C, C#, Java (built-in support).<br>
 b. Ruby, Lua, Python, Perl, PHP, Tcl, Swift, JavaScript, Shell scripts, Dart, Go and Rust.<br>
-  (located in the formatters directory, requires a little configuration to let them correctly working)<br><br>
+  (located in the formatters directory, requires a little configuration to let them work properly)<br><br>
 
 <lt>~/Library/Application Scripts/com.sevenuc.SpeareHelper/formatters/</lt><br>
 <i>Ensure the formatters can be correctly working, you should take a look at above directory, the built-in formatters:<br>
