--- a/en/debugger.html
+++ b/en/debugger.html
@@ -122,17 +122,21 @@ The built-in mruby debugger of Speare full supports <a href="https://mruby.org/"
 You can directly switch CPython interpreter to MicroPython or your own self-compiled version of Python, or others such as PyPy, Jython and IronPython.
 </p>
 
-
 <h2>Tcl Debugger</h2>
 <p>The Tcl debugger of Speare code editor supports all kinds of Tcl development, from embedded systems to common desktop app to web applications, you can debug Tcl code and C and C++ modules for Tcl in the same lightweight debugging environment with efficient code editing and debugging capability.
 </p>
 </div>
 
-<br><br>
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
 On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.<br><br>
 About the absurdity of software industry, please take a look another example, <a href="ridiculous_desk.html" target="_blank">"Ridiculous Desk"</a>.
+</p>
+
+<h2>About Programming Languages</h2>
+<p>I have used various popular programming languages from DOS era to now, for small, reliable and strong software:<br><br>
+<span class="green">C is the only choice.</span><br><br>
+C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++, master C programming language and make small software is a real programmer's cultivation.
 </p>
 
 
