--- a/en/speare.html
+++ b/en/speare.html
@@ -120,6 +120,7 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 
 <p>Speare code editor was developing based on the native pure Cocoa frameworks with leveraging several C library results a very small footprint, high performance, small memory and storage runtime consuming, and ultra small distribution. Only 1.1MB executable!</p>
 
+<a name="whysmallsoftware"></a><br>
 <h2>Why not big software?</h2>
 <p>Waste time to maintain, wast big storage and runtime memory, waste energy, waste time to upload and download. It's waste people's life! Every desktop developer should known one thing, the embedded system developers sometime even fighting for one byte of storage in some situation. They never think about memory and storage like embedded system developers, so more and more big monster there. In today's software industry, Unix philosophy has been throw away completely!</p>
 
