--- a/en/debugger.html
+++ b/en/debugger.html
@@ -137,6 +137,8 @@ About the absurdity of software industry, please take a look another example, <a
 <p>I have used various popular programming languages from DOS era to now, for small, reliable and strong software:<br><br>
 <span class="green">C is the only choice.</span><br><br>
 C can make strongest software by programmer crafting with patient and willpower. C is far from a perfect language and it really has many flaws, C++ has more, but no replacement. I've tried Nim in its early stage, it's a good idea but the final result is unacceptable, the result turned out to be an interesting but failed attempt, because it produced a lot of garbage when automatically generating C code, that's very annoying, so I throw it away immediately. And I've tried Wren, a small scripting language, sorry, it really can't compare to Lua, so I have to give it up. From my programming experience, Java have more stronger OOP ability than C++, and Objective-C have more stronger OOP ability than Java, Ruby has the extreamly OOP flexbilty in all of them, but there isn't a perfect programming language in the world can help you make a good software without, without long term programming experience. Despite Rust, Go, OC and Swift try to resolve existing issues in C and C++ programming language, but none of them can replace the importance of C and C++, master C programming language and make small software is a real programmer's cultivation.
+
+<span class="green"> → <a href="speare.html#whysmallsoftware" target="_blank">Why small software.</a></span>
 </p>
 
 
