--- a/en/debugger.html
+++ b/en/debugger.html
@@ -129,8 +129,7 @@ You can directly switch CPython interpreter to MicroPython or your own self-comp
 
 <h2>About Software Industry</h2>
 <p>They obviously know a technology is garbage, a project shouldn't be started, but they don’t have enough courage to admit the mistake, correct the mistake, cancel the project and abandon that technology.
-On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.<br><br>
-About the absurdity of software industry, please take a look another example, <a href="ridiculous_desk.html" target="_blank">"Ridiculous Desk"</a>.
+On the contrary, they not only want to recover their cost, they even drag customers into big mud puddle and even promote their big lies to make money.
 </p>
 
 <h2>About Programming Languages</h2>
