--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -49,12 +49,12 @@ The ultra light code editor.
 
 <h2>Screenshots</h2>
 <p>
+<a href="../images/speare/screenshots/c_in_speare.png" target="_blank"><img src="../images/speare/screenshots/c_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/symbol_index_in_speare.png" target="_blank"><img src="../images/speare/screenshots/symbol_index_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/java_in_speare.png" target="_blank"><img src="../images/speare/screenshots/java_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/awk_in_speare.png" target="_blank"><img src="../images/speare/screenshots/awk_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/lua_in_speare.png" target="_blank"><img src="../images/speare/screenshots/lua_in_speare.png" class="screenshots"/></a><br><br>
 <a href="../images/speare/screenshots/ruby_in_speare.png" target="_blank"><img src="../images/speare/screenshots/ruby_in_speare.png" class="screenshots"/></a><br><br>
-
 </p>
 
 
