--- a/en/speare.html
+++ b/en/speare.html
@@ -29,7 +29,7 @@ w { color:#ffc8c8; font-weight: bold; }
 
     <div class="jumbotron">
         <img src="../images/speare/logo.png" style="width: 120px;" class="applogo"/>
-        <h1>Speare<br><em>Version 1.2.344</em></h1>
+        <h1>Speare<br><em>Version 1.2.402</em></h1>
         <p class="greenbig">The ultra light code editor.</p>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare</a> is a small and friendly code editor. It was originally developed to provide a native scripting language debugging environment that seamlessly integrated with C and C++. You can use it to edit source code files, programming and debugging. Speare designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</p>
@@ -163,15 +163,9 @@ Using .diff files with the help of "Parallel Editing" mode has obvious advantage
 <p>Speare developed as an ultra light code editor that completely leverage "Keyboard shortcuts" for fast editing. Keyboard shortcuts instead of "moving mouse and click" can notably improve code editing experience. Real programmer use keyboard shortcuts as a habit constantly. Real programmer use and write command line applications as a habit constantly. Keyboard shortcuts can help people fast move focus between workspace and text editor, and fast switch between running apps such as Debug Server, Fossil, Web browser and Speare. 
 </p>
 
-
-<h2>Debug Mode</h2>
-<p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
-
 <h2>Speare Keyboard Shortcuts</h2>
-<p>
-Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
+<p>Please refer the table: <a href="http://www.sevenuc.com/download/speare_shortcuts.pdf" target="_blank">speare_shortcuts.pdf</a>
 </p>
-
 
 <h2>Syntax Checking and Run Code Instantly</h2>
 <p>a. Press shortcut key "Command + R".<br>
@@ -182,6 +176,9 @@ Spear enable people to run shell scripts within editor with hot editing.<br>
 Spear enable people to write unlimited shell extension to do anything they want.<br>
 </p>
 <p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
+
+<h2>Debug Mode</h2>
+<p>Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.</p>
 
 
 <h2>Add a New Colour Scheme</h2>
