--- a/en/speare.html
+++ b/en/speare.html
@@ -59,7 +59,7 @@ w { color:#ffc8c8; font-weight: bold; }
 <li>High performance when managing large amount of files for big projects.</li>
 <li>Fast search and replace in current document, selected folder, opened files and entire project.</li>
 <li>Smoothly edit multiple files that written in different programming languages simultaneously.</li>
-<li>Supports 90+ programming languages syntax highlighting and parsing.</li>
+<li>Supports 90+ programming language and document formats syntax highlighting and parsing.</li>
 <li>Auto-completion, sensitively typing, live parsing symbol definitions with editing actions.</li>
 <li>Jump to definition, fast locate code lines between editing files by symbol index, bookmarks or searching.</li>
 <li>Unlimited go back and forward, automatically remember jump location and current editing locations.</li>
