--- a/en/speare.html
+++ b/en/speare.html
@@ -182,38 +182,9 @@ Spear enable people to write unlimited shell extension to do anything they want.
 
 
 <h2>Add a New Colour Scheme</h2>
-&nbsp;&nbsp;&nbsp;Colour scheme boilerplate:<br>
-<div class="block small">
-# 1. file must be UTF-8 encoding<br>
-# 2. line starts with character '#' is comment<br>
-# 3. colour string must be a valid hex value of HTML colour<br>
-#&nbsp;&nbsp;&nbsp;&nbsp;and starts with character '#' and a ':'(colon) following the keyword<br>
-# 4. file extension must be 'txt'<br>
-# 5. line ending must be '\n'<br><br>
-
-text: #abb2bf<br>
-background: #282c34<br>
-current line: #dcc6e0<br>
-selection: #61aeee<br>
-invisibles: #c0c0c0<br>
-cursor: #d08770<br>
-attributes: #98c379<br>
-variables: #d19a66<br>
-comments: #5c6370<br>
-strings: #98c379<br>
-keywords: #c678dd<br>
-tags: #e06c75<br>
-predefined: #e6c07b<br>
-blocks: #a3be8c<br>
-tree view background: #282c34<br>
-tree view text: #abb2bf<br>
-number: #abb2bf<br>
-</div>
-</p>
-
-<p>Please save the above content as a plain text file, e.g schemeX.txt, and directly edit the colour values to fit a new style, then put it under the following directory:<br>
+<p>Please download colour scheme boilerplate from here: <a href="http://www.sevenuc.com/download/colorschemes.tar.gz">colorschemes.tar.gz</a>, uncompress it, edit the colour values to fit a new style, and then put it under the following directory to take effect.<br>
 <lt>~/Library/Application Scripts/com.sevenuc.speareeditor/colorschemes/</lt><br>
-Some reference schemes can be downloaded from here: <a href="http://www.sevenuc.com/download/colorschemes.tar.gz">colorschemes.tar.gz</a> and you can put it under the above directory as a reference.
+<span>Please create the directory if it does not exist.</span><br><br>
 </p>
 
 <h2>Code Formatter/Code Beautifier</h2>
