--- a/en/debugger.html
+++ b/en/debugger.html
@@ -34,14 +34,14 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare version 1.2.404
+Speare version 1.2.405
 The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
-<small>(Release date: Jul 10 2021)</small>
+<small>(Release date: Jul 13 2021)</small>
 </pre></p>
         <h1></h1>
         <p class="lead">
-        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.
+        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and Java, and give people complete freedom to control and customise the debugging environment for a new programming language.
         </p>
     </div>
 
@@ -79,8 +79,8 @@ Watches used to evaluate variable or expression and their values can be real-tim
 
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
-<p><lt><i>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</i></lt></p>
-<p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
+<p><lt><i>A small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and Java.</i></lt></p>
+<p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Java, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 <h2>Debugging code with Speare code editor</h2>
 <p><small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
@@ -102,7 +102,6 @@ Speare code editor is a small PHP IDE that well support all kinds of PHP develop
 
 Speare code editor support various game engine and frameworks, such as the LÖVE 2D, Moai open source game engine, the Gideros mobile game platform, the Corona 2D game engine, the Marmalade game engine, the Cocos2d and cocos2d-x game engine, the OpenResty Nginx web server and the Lapis web framework, the high performance Prosody instant message server, the JUCI Webgui for embedded devices, the Torch machine learning framework, and the Redis open source database etc.
 <br><br></p>
-
 
 <h2>Ruby Debugger</h2>
 <p>Speare supports debugging all kinds of Ruby development, mruby/c and mruby, Ruby and Ruby on Rails, please refer this document <a href="http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf" target="_blank">http://www.sevenuc.com/download/Small_IDE_for_Ruby_development.pdf</a>.
