--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
   _\ \/ _ \/ -_) _ `/ __/ -_)
  /___/ .__/\__/\_,_/_/  \__/
     /_/
-Speare version 1.2.404
+Speare version 1.2.405
 The ultra light code editor.
 (c) 2021 http://www.sevenuc.com
 <small>(Release date: Jul 10 2021)</small>
 </pre></div>
 
 <h1>Speare code editor</h1>
-<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to customise a debugging environment for a new programming language.
+<p><a href="http://www.sevenuc.com/en/speare.html" target="_blank"><img src="http://www.sevenuc.com/images/speare/logo.png" style="float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;"> <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight <a href="http://www.sevenuc.com/en/debugger.html" target="_blank">built-in debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and Java, and give people complete freedom to customise a debugging environment for a new programming language.
 </p>
 
 </div> <!-- jumbotron -->
