--- a/en/debugger.html
+++ b/en/debugger.html
@@ -45,6 +45,10 @@ The ultra light code editor.
         </p>
     </div>
 
+<h2 class="dark">What's new</h2>
+<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 5 and later, all kinds of Java application development. </span><small>(update: Jul 11 2021)</small>
+</p>
+
 <p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link">
