updates for java

--- a/en/debugger.html
+++ b/en/debugger.html
@@ -46,7 +46,7 @@ The ultra light code editor.
     </div>
 
 <h2 class="dark">What's new</h2>
-<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 5 and later, all kinds of Java application development. </span><small>(update: Jul 11 2021)</small>
+<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development. </span><small>(update: Jul 11 2021)</small>
 </p>
 
 <p><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></p>
@@ -80,10 +80,9 @@ Watches used to evaluate variable or expression and their values can be real-tim
 <ul><li><span>Please ensure all source files have been dragged in the workspace before start a debug session, because macOS app can't be allowed to access files outside of its sandbox.</span></li>
 <li><span>When your source code file moved to another folder, debugging source code operation requires to drag the project folder in Speare again then the debugging can correctly work.</span></li></ul>
 
-
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
-<p><lt><i>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and Java.</i></lt></p>
+<p><lt><i>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</i></lt></p>
 <p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 <h2>Debugging code with Speare code editor</h2>
