--- a/en/debugger.html
+++ b/en/debugger.html
@@ -84,7 +84,7 @@ Watches used to evaluate variable or expression and their values can be real-tim
 <h2>Debugger Architecture</h2>
 <a href="../images/speare/debugger.png" target="_blank"><img src="../images/speare/debugger.png" class="screenshots"/></a><br>
 <p><lt><i>A free small IDE for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl.</i></lt></p>
-<p>Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
+<p>Speare code editor support embedded system software development, e.g. Arduino and Raspberry Pi embedded development platform, desktop software and server side application development. Proposed debugging environment support in Speare code editor are: GDB, LLDB, Ruby, mruby, Lua, Python, Perl, PHP, Tcl, Node.js, Dart, AWK and shell. Speare code editor provides very concise and simple interface to add new programming language in it, end user can very easily write a new programming language parser, syntax highlighting, code formatter and debugger for it.</p>
 
 <h2>Debugging code with Speare code editor</h2>
 <p><small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
